# e3-vla

./: .gitignore  README.md  plan.md  pyproject.toml
.claude/: settings.local.json
configs/benchmark/: ablation.yaml  default.yaml  full_comparison.yaml
configs/cache/: default.yaml
configs/eval/: speculative.yaml
configs/model/: cached_ae_no_offset.yaml  default.yaml  no_cached_ae.yaml  openpi.yaml
configs/train/: default.yaml
docs/: architecture.md  autodl_setup.md  data_format.md  experiment_flow.md  experiment_protocol.md  experiment_sizing.md  hyperparameter_analysis.md  interfaces.md
e3vla/: __init__.py  protocols.py  schema.py
e3vla/adapters/: openpi_adapter.py
e3vla/align/: ae_feature_aligner.py  offset_encoder.py
e3vla/benchmark/: runner.py
e3vla/benchmark/wrappers/: cached_action_reuse_wrapper.py  flash_wrapper.py
e3vla/cache/: runtime_cache.py
e3vla/data/: cache_writer.py  dataset_builder.py
e3vla/drafter/: ae_feature_mixer.py  cached_ae_drafter.py
e3vla/drafter/ablation/: cached_ae_no_offset.py  no_cached_ae.py
e3vla/eval/: report_writer.py  rollout_runner.py
e3vla/policy/: speculative_cached_policy.py
e3vla/utils/: __init__.py
e3vla/verifier/: action_expert_anchor_verifier.py  full_l2_oracle_verifier.py  prefix_acceptor.py
scripts/: generate_cache.py  generate_report.py  run_benchmark.py  train_drafter.py
tests/: test_cache.py  test_drafter.py  test_policy.py  test_verifier.py
